Do not desugar delete at parse time.
    * src/ast/ast.yml (Delete): New node for deletions.
    * src/parser/ast-factory.cc,
    * src/parser/ast-factory.hh (ast_slot_remove): Delete.
    * src/parser/ugrammar.y: Do not desugar deletions.
    * src/rewrite/desugarer.cc,
    * src/rewrite/desugarer.hh: Desugar deletions.
    * src/runner/interpreter-visit.hxx: Reject Delete nodes.

--- a/src/ast/ast.yml
+++ b/src/ast/ast.yml
@@ -1081,6 +1081,15 @@ PropertyWrite:
 PropertyRead:
   super: PropertyAction
 
+Delete:
+  super: Exp
+  attributes:
+    - what:
+        type: rCall
+  printer:
+    - '"delete "'
+    - ~what
+
 # Local Variables:
 # mode: yaml
 # End:
