--- a/src/ast/.gitignore
+++ b/src/ast/.gitignore
@@ -48,6 +48,9 @@ decrementation.hxx
 default-visitor.hh
 default-visitor.hxx
 default-visitor.stamp
+delete.cc
+delete.hh
+delete.hxx
 do.cc
 do.hh
 do.hxx
