--- a/src/ast/.gitignore
+++ b/src/ast/.gitignore
@@ -101,12 +101,18 @@ local-write.hxx
 local.cc
 local.hh
 local.hxx
+lvalue.cc
+lvalue.hh
+lvalue.hxx
 message.cc
 message.hh
 message.hxx
 meta-exp.cc
 meta-exp.hh
 meta-exp.hxx
+meta-lvalue.cc
+meta-lvalue.hh
+meta-lvalue.hxx
 nary.cc
 nary.hh
 nary.hxx
