Enable parametric message names in parametric ASTs.
ParametricAst ast("tgt . %id:1 (42)");
ast % SYMBOL(msg);

    * src/ast/ast.yml (MetaCall): New node for parametric calls.
    * src/ast/parametric-ast.cc,
    * src/ast/parametric-ast.hh: Handle parametric calls.
    * src/parser/ugrammar.y,
    * src/parser/utoken.l: Handle "%id".
    * src/runner/interpreter-visit.hxx: Reject MetaCall nodes.

--- a/src/ast/.gitignore
+++ b/src/ast/.gitignore
@@ -107,6 +107,9 @@ lvalue.hxx
 message.cc
 message.hh
 message.hxx
+meta-call.cc
+meta-call.hh
+meta-call.hxx
 meta-exp.cc
 meta-exp.hh
 meta-exp.hxx
