Add dot ast dumper.
    * dev/ast-dot-printer-gen: New. Dump ast in the dot format.
    * src/ast-dump.cc: New. Suiss army knife for ast analyze.
    * dev/ast-ignores-gen,
    * src/ast/.gitignore,
    * dev/ast-gen.mk,
    * src/ast/local.mk,
    * dev/dev.mk,
    * src/Makefile.am: Register files.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -86,9 +86,11 @@ urbiinclude_HEADERS = $(uobject_headers)
 ## -------------- ##
 
 if !OPENR
-bin_PROGRAMS = urbi-console
+bin_PROGRAMS = urbi-console ast-dump
 urbi_console_SOURCES = urbi-console.cc
 urbi_console_LDADD = libkernel.la $(PTHREAD_LIBS) $(LTDL_LIBS)
+ast_dump_SOURCES = ast-dump.cc
+ast_dump_LDADD = libkernel.la $(PTHREAD_LIBS) $(LTDL_LIBS) -lboost_regex
 
 dist_libkernel_la_SOURCES +=			\
 console-server.cc				\
@@ -100,3 +102,4 @@ console-server.cc				\
 libkernel_la_LIBADD = $(top_builddir)/lib/libport/libport.la
 
 endif
+
