Make Pipes n-ary instead of binary.
This avoid recursion when visiting multiples pipes.

    * src/ast/ast.yml
    (Composite): New. Factor And and Pipe.
    (Binary): Remove.
    * src/parser/ast-factory.cc,
    * src/runner/interpreter-visit.hxx: Adapt.

--- a/src/ast/.gitignore
+++ b/src/ast/.gitignore
@@ -15,9 +15,6 @@ ast.cc
 ast.dot
 ast.hh
 ast.hxx
-binary.cc
-binary.hh
-binary.hxx
 binding.cc
 binding.hh
 binding.hxx
@@ -36,6 +33,9 @@ cloner.stamp
 closure.cc
 closure.hh
 closure.hxx
+composite.cc
+composite.hh
+composite.hxx
 continue.cc
 continue.hh
 continue.hxx
