Rewrite foreachs using parametric ASTs.
    * src/flower/flower.cc: Here.
    * src/ast/ast.yml: Enable to change a Call's symbol.

--- a/src/ast/ast.yml
+++ b/src/ast/ast.yml
@@ -887,8 +887,9 @@ LocalWrite:
   super: Exp
   attributes:
     - what:
-        type: 'libport::Symbol'
-        desc: Name of the symbol being declared or updated.
+        type:   'libport::Symbol'
+        desc:   Name of the symbol being declared or updated.
+        access: rW
     - value:
         type: rExp
         desc: Initialization value.
