--- a/src/ast/.gitignore
+++ b/src/ast/.gitignore
@@ -107,12 +107,18 @@ local-write.hxx
 local.cc
 local.hh
 local.hxx
+lvalue-args.cc
+lvalue-args.hh
+lvalue-args.hxx
 lvalue.cc
 lvalue.hh
 lvalue.hxx
 message.cc
 message.hh
 message.hxx
+meta-args.cc
+meta-args.hh
+meta-args.hxx
 meta-call.cc
 meta-call.hh
 meta-call.hxx
