Do not desugar event emmissions at parse time.
    * src/ast/ast.yml (Emit): New node to represent events emission.
    * src/parser/ugrammar.y: Do not desugar emissions.
    * src/rewrite/desugarer.cc,
    * src/rewrite/desugarer.hh: Desugar emissions.
    * src/runner/interpreter-visit.hxx: Reject Emit nodes.

--- a/src/ast/ast.yml
+++ b/src/ast/ast.yml
@@ -1177,6 +1177,21 @@ Class:
     - 'libport::decendl'
     - '"}"'
 
+Emit:
+  super: Exp
+  attributes:
+    - event:
+        type: rExp
+        desc: The emitted event
+    - arguments:
+        type: exps_type*
+        desc: Values carried by the event
+        mandatory: false
+    - duration:
+        type: rExp
+        desc: Duration of the emission
+        mandatory: false
+
 # Local Variables:
 # mode: yaml
 # End:
