Pretty print modifiers.
    * src/ast/ast.yml: Here.
    * src/binder/binder.cc: Set the original AST even for modifiers.

--- a/src/ast/ast.yml
+++ b/src/ast/ast.yml
@@ -991,6 +991,15 @@ Write:
     - ~what
     - '" = "'
     - ~value
+    - '{
+         if (const modifiers_type* modifiers = n->modifiers_get())
+           foreach (const modifiers_type::value_type& modifier, *modifiers)
+           {
+             ostr_ << " ";
+             ostr_ << modifier.first << ": ";
+             operator()(modifier.second.get());
+           }
+       }'
 
 Declaration:
   super: Write
