--- a/src/ast/ast.yml
+++ b/src/ast/ast.yml
@@ -834,7 +834,11 @@ Lazy:
         access: rwW
   printer:
     - ~strict
-    - '{ if (getenv("PPRINTER")) ostr_ << "/* " << *n->lazy_get() << " */"; }'
+    - '{
+         static bool pprinter = getenv("PPRINTER");
+         if (pprinter)
+           ostr_ << "/* " << *n->lazy_get() << " */";
+       }'
 
 Routine:
   super: Exp
