Do not include the dot dumper in libkernel.
This make libkernel depend on boost regex in non static mode.

    * src/ast/local.mk: Here.
    * src/Makefile.am: Include in in ast-dump.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -89,7 +89,7 @@ if !OPENR
 bin_PROGRAMS = urbi-console ast-dump
 urbi_console_SOURCES = urbi-console.cc
 urbi_console_LDADD = libkernel.la $(PTHREAD_LIBS) $(LTDL_LIBS)
-ast_dump_SOURCES = ast-dump.cc
+ast_dump_SOURCES = ast-dump.cc ast/dot-printer.cc
 ast_dump_LDADD = libkernel.la $(PTHREAD_LIBS) $(LTDL_LIBS) -lboost_regex
 
 dist_libkernel_la_SOURCES +=			\
