On 'var x;', initialize x to void, not nil.
    * src/parser/ugrammar.y: Use a NULL value.
    * src/object/object-class.cc
    (setVoidSlot): New: create a slot initialized to void.
    * src/binder/binder.cc,
    * src/binder/binder.hh: When the value in NULL, use setVoidSlot.
    * src/runner/interpreter-visit.hxx
    (LocalDeclaration): When the value is NULL, use void.
    * share/urbi/lazy.u,
    * share/urbi/updatehook-stack.u
    * src/ast/ast.yml,
    * tests: Adapt.

--- a/src/ast/ast.yml
+++ b/src/ast/ast.yml
@@ -938,8 +938,13 @@ LocalDeclaration:
   printer:
     - '"var "'
     - $what
-    - '" = "'
-    - ~value
+    - '{
+         if (n->value_get())
+         {
+           ostr_ << " = ";
+           operator()(n->value_get().get());
+         }
+       }'
 
 LocalAssignment:
   super: LocalWrite
