Enable strict functions to have call messages.
The call message is created on demand; that is, only for functions that uses it.

    * src/ast/ast.yml (Routine): Add a field to store whether call is used.
    * src/binder/binder.cc: Fill it. Stop rejecting call in strict functions.
    * src/object/code-class.cc,
    * src/runner/interpreter-apply.cc: Build the call message when necessary.
    * src/object/code-class.hh: Print the functional value when dumping.
    * src/object/object.hh: Aesthetic change.

--- a/src/ast/ast.yml
+++ b/src/ast/ast.yml
@@ -871,6 +871,10 @@ Routine:
         type: unsigned
         init: '0'
         access: rW
+    - uses_call:
+        type: bool
+        init: 'false'
+        access: rW
   inline:
     header inside: |2
         public:
