Support inline documentation.
Inline documentation can now be introduced with /*! ... */, and is stored as
property:

function foo()
/*! doc */
{};
foo->doc;

    * src/ast/ast.yml: Add a documentation field to ast nodes.
    * dev/ast-cloner-gen: Preserve it when cloning.
    * src/parser/ugrammar.y,
    * src/parser/utoken.l: Parse and scan special comments.
    * src/binder/binder.cc,
    * src/binder/binder.hh: Store it as property.

--- a/src/ast/ast.yml
+++ b/src/ast/ast.yml
@@ -212,6 +212,10 @@ Ast:
       # include <ast/fwd.hh>
       namespace runner { class Interpreter; }
   attributes:
+    - doc:
+        type: 'std::string'
+        access: rW
+        init: '""'
     - location:
         type: loc
         access: rW
