Don't display undefined values.
	* src/ast/ast.yml (Declaration::printer): here.

--- a/src/ast/ast.yml
+++ b/src/ast/ast.yml
@@ -1006,8 +1006,10 @@ Write:
         mandatory: false
   printer:
     - ~what
-    - '" = "'
-    - ~value
+    - '{
+         if (const rExp& value = n->value_get())
+           ostr_ << " = " << *value;
+       }'
     - '{
          if (const modifiers_type* modifiers = n->modifiers_get())
          {
