Do not include Boost regex library in urbi-console.
	* configure.ac: Check for BOOST_REGEX.
	* src/Makefile.am: Include ast/dot-printer only in ast-dump.
	* src/ast/local.mk: Do not include ast/dot-printer in libkernel.

--- a/configure.ac
+++ b/configure.ac
@@ -89,6 +89,7 @@ URBI_OPENR
 URBI_LIBPORT
 # URBI_LIBPORT calls the Boost macros first, so keep other Boost stuff below.
 BOOST_TOKENIZER
+BOOST_REGEX
 
 
 ## ------ ##
