Explicitly mark exported symbols.
Prefix all classes and variables being part of the urbi sdk API with
USDK_API. Define this macro as nothing, __declspec(dllexport) or
__declspec(dllimport) depending on what we are doing.

	* src/liburbi/uobject/urbi/export.hh: New, define USDK_API.
        * src/liburbi/uobject/urbi/ubinary.hh,
        * src/liburbi/uobject/urbi/ucallbacks.hh.template,
        * src/liburbi/uobject/urbi/uobject.hh,
        * src/liburbi/uobject/urbi/ustarter.hh,
        * src/liburbi/uobject/urbi/usystem.hh,
        * src/liburbi/uobject/urbi/utable.hh,
        * src/liburbi/uobject/urbi/utimer-callback.hh,
        * src/liburbi/uobject/urbi/utimer-table.hh,
        * src/liburbi/uobject/urbi/uvalue.hh,
        * src/liburbi/uobject/urbi/uvar.hh,
        * src/liburbi/uobject/utable.cc,
        * src/liburbi/uobject/utimer-table.cc: Include urbi/export.hh,
	  prefix declarations with USDK_API.

--- a/sdk-remote/src/liburbi/uobject/urbi/ucallbacks.hh.template
+++ b/sdk-remote/src/liburbi/uobject/urbi/ucallbacks.hh.template
@@ -22,6 +22,7 @@
 
 # include <string>
 
+# include <urbi/export.hh>
 # include <urbi/utable.hh>
 # include <urbi/uvalue.hh>
 
@@ -33,7 +34,7 @@ namespace urbi
     the interface user point's of view.
   */
 
-  class UGenericCallback
+  class USDK_API UGenericCallback
   {
   public:
     UGenericCallback(const std::string& objname,
