Do not build ast-dumper under win32.
	* src/Makefile.am: There.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -87,13 +87,18 @@ urbiinclude_HEADERS = $(uobject_headers)
 ## urbi-console.  ##
 ## -------------- ##
 
+bin_PROGRAMS=
 if !OPENR
-bin_PROGRAMS = urbi-console ast-dump
-urbi_console_SOURCES = urbi-console.cc
-urbi_console_LDADD = libkernel.la $(PTHREAD_LIBS) $(LTDL_LIBS)
+bin_PROGRAMS += urbi-console
+if !WIN32
+bin_PROGRAMS += ast-dump
 ast_dump_SOURCES = ast-dump.cc ast/dot-printer.cc
 ast_dump_LDADD = libkernel.la $(PTHREAD_LIBS) $(LTDL_LIBS) \
-	$(BOOST_REGEX_LDFLAGS) $(BOOST_REGEX_LIBS)
+        $(BOOST_REGEX_LDFLAGS) $(BOOST_REGEX_LIBS)
+endif
+
+urbi_console_SOURCES = urbi-console.cc
+urbi_console_LDADD = libkernel.la $(PTHREAD_LIBS) $(LTDL_LIBS)
 
 dist_libkernel_la_SOURCES +=			\
 console-server.cc				\
