Use "$(MAKE)" instead of "make".
Using "$(MAKE)" is not only safer (for example if the currently used
make program is named "gmake"), but also allows parallel sub-builds
in GNU make.

--- a/Makefile.am
+++ b/Makefile.am
@@ -100,4 +100,4 @@ check-buildfarm:
 all: $top_builddir/bison/src/bison
 
 $top_builddir/bison/src/bison:
-	(cd bison && make)
+	$(MAKE) -C bison MAKEFLAGS=
