Complete switch to shared libraries and fix wine cl.exe build.
	* configure.ac:
	  - Remove AC_ENABLE_SHARED([no]).
	  - Conditionally call AC_PATH_XTRA depending on $host. Otherwise
	    we end up with a -I/usr/include while cross-compiling.
	  - Call URBI_LIBTOOL to enable libtool quircks.
	* include/urbi/uabstractclient.hh,
	* include/urbi/uclient.hh,
	* include/urbi/uconversion.hh,
	* include/urbi/usyncclient.hh: Mark exported symbols with USDK_API.
	* src/examples/Makefile.am: Add dependencies on gdi32 and user32
	  when building for WIN32.
	* src/liburbi/Makefile.am: Define BUILDING_URBI_SDK an
	  BUILDING_LIBPORT, pass -no-undefined to libtool.

--- a/sdk-remote/configure.ac
+++ b/sdk-remote/configure.ac
@@ -36,12 +36,15 @@ AC_CONFIG_FILES([build-aux/test.sh],
 AC_PROG_CC
 URBI_PROG_CXX
 
-# We don't need shared libraries, speed the compilation up.
-AC_ENABLE_SHARED([no])
 AC_PROG_LIBTOOL
 
 # X11.
-AC_PATH_XTRA
+# AC_PATH_XTRA will find us X11 headers even if we are cross-compiling for windows
+case $ac_cv_host in
+(*pw32*|*win32*) no_x=yes;;
+(*)  AC_PATH_XTRA ;;
+esac
+
 AM_CONDITIONAL([X11], [test x"$no_x" != xyes])
 # FIXME: -lXext should be checked too.
 if test x"$no_x" != xyes; then
@@ -111,6 +114,9 @@ if test x"$enable_bindings" != xno; then
    SWIG_ENABLE_CXX
  fi
 fi
+
+
+URBI_LIBTOOL
 
 ## -------- ##
 ## Output.  ##
