Only install kernel headers if asked in configure.
Sorry, I did not find a clean way to implement this without huge
modifications to all our .mk files.

	* configure.ac: Support --enable-headers-install, false by default.
	* src/Makefile.am: Add an install-data-hook that removes
	  $(prefix)/gostai/kernel if INSTALL_KERNEL_HEADERS is not set.

--- a/configure.ac
+++ b/configure.ac
@@ -69,6 +69,10 @@ case $enable_precompiled_symbols in
                  [Define if Urbi symbols should be precompiled]);;
 esac
 
+URBI_ARG_ENABLE([enable-headers-install],
+                [Install kernel headers], [yes|no], [no])
+AM_CONDITIONAL([INSTALL_KERNEL_HEADERS],
+               [ test x$enable_headers_install = xyes])
 URBI_WITH_LTDL
 
 # Where we look for the installed files.
