Import document-aux.
	* .gitmodules: Here.
	* doc/specs/share,
	* doc/tutorial/share: Adapt symlink.

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,9 @@
 [submodule "bison"]
 	path = bison
 	url = git@core.gostai.com:bison.git
+[submodule "document-aux"]
+	path = doc/document-aux
+	url = git@core.gostai.com:document-aux.git
+[submodule "doc/document-aux"]
+	path = doc/document-aux
+	url = git@core.gostai.com:document-aux.git
