Move to Flex 2.5.35.
You are expected to get rid of 2.5.4a from now on.

	* configure.ac: Require Flex 2.5.35.
	* src/parser/flex-lexer.hh: Make it much more alike to the
	standard FlexLexer.h from 2.5.35.
	* src/parser/utoken.l: Comment changes.

--- a/configure.ac
+++ b/configure.ac
@@ -42,7 +42,7 @@ cd bison
 cd ..
 
 AC_SUBST([BISON], [$(pwd)/bison/tests/bison])
-TC_PROG([flex],  [== 2.5.4], [FLEX],  [fast lexical analyzer generator])
+TC_PROG([flex],  [>= 2.5.33], [FLEX],  [fast lexical analyzer generator])
 
 URBI_PROG_CXX
 TC_CXX_WARNINGS([[-Wcast-align],
