--- a/configure.ac
+++ b/configure.ac
@@ -32,17 +32,17 @@ URBI_DOC
 
 URBI_COMPILATION_MODE
 
+# Bison.
 AC_CONFIG_FILES([build-aux/bison++], [chmod +x build-aux/bison++])
-AC_CONFIG_FILES([build-aux/flex++],  [chmod +x build-aux/flex++])
-# TC_PROG([bison], [>= 2.3a+], [BISON], [GNU parser generator])
-# We use our own Bison as a host tool.
-mkdir -p bison
+test -d bison || mkdir bison
 cd bison
 ../$srcdir/bison/configure CC= CXX= LD= AR= CPPFLAGS= CXXFLAGS= CFLAGS=
 cd ..
-
 AC_SUBST([BISON], [$(pwd)/bison/tests/bison])
-TC_PROG([flex],  [>= 2.5.33], [FLEX],  [fast lexical analyzer generator])
+
+# Flex.
+AC_CONFIG_FILES([build-aux/flex++],  [chmod +x build-aux/flex++])
+TC_PROG([flex],  [>= 2.5.35], [FLEX],  [fast lexical analyzer generator])
 
 URBI_PROG_CXX
 TC_CXX_WARNINGS([[-Wcast-align],
@@ -55,7 +55,8 @@ TC_CXX_WARNINGS([[-Wcast-align],
 
 AM_PROG_AS
 
-# Disable static libraries. Loading modules as shared libraries requires us to be one.
+# Disable static libraries. Loading modules as shared libraries
+# requires us to be one.
 AC_ENABLE_STATIC([no])
 AC_PROG_LIBTOOL
 
