Use boost::filesystem to list directories.
	* src/object/directory.cc: Here.
	* configure.ac: Detect boost filesystem.
	* src/Makefile.am: Link with it.

--- a/configure.ac
+++ b/configure.ac
@@ -98,8 +98,9 @@ BOOST_REQUIRE([1.35])
 URBI_OPENR
 URBI_LIBPORT
 # URBI_LIBPORT calls the Boost macros first, so keep other Boost stuff below.
-BOOST_TOKENIZER
+BOOST_FILESYSTEM
 BOOST_REGEX
+BOOST_TOKENIZER
 
 
 ## ------ ##
